--- a/React/Amazon-starter-template-nextjs-main/package.json
+++ b/React/Amazon-starter-template-nextjs-main/package.json
@@ -9,16 +9,21 @@
   "dependencies": {
     "@heroicons/react": "^1.0.6",
     "@reduxjs/toolkit": "1.5.0",
+    "@stripe/stripe-js": "^1.29.0",
     "@tailwindcss/line-clamp": "^0.2.0",
+    "axios": "^0.27.2",
     "firebase": "^8.10.1",
-    "firebase-admin": "^9.8.0",
+    "firebase-admin": "^9.12.0",
+    "micro": "^9.3.4",
+    "moment": "^2.29.3",
     "next": "latest",
     "next-auth": "^4.3.3",
     "react": "17.0.2",
     "react-currency-format": "^1.1.0",
     "react-dom": "17.0.2",
     "react-redux": "7.2.2",
-    "react-responsive-carousel": "^3.2.23"
+    "react-responsive-carousel": "^3.2.23",
+    "stripe": "^8.219.0"
   },
   "license": "MIT",
   "devDependencies": {
